@@ -21,6 +21,11 @@ plugins {
   kotlin("kapt")
 }
 
+tasks.withType<Test>().configureEach {
+  // ExtendsPlatformClassWithProtectedField tests a case where we set a protected ByteArrayOutputStream.buf field
+  jvmArgs("--add-opens=java.base/java.io=ALL-UNNAMED")
+}
+
 tasks.withType<KotlinCompile>().configureEach {
   kotlinOptions {
     @Suppress("SuspiciousCollectionReassignment")
@@ -36,7 +41,7 @@ dependencies {
   testImplementation(project(":moshi"))
   testImplementation(project(":kotlin:reflect"))
   testImplementation(kotlin("reflect"))
-  testImplementation(Dependencies.Testing.junit)
-  testImplementation(Dependencies.Testing.assertj)
-  testImplementation(Dependencies.Testing.truth)
+  testImplementation(libs.junit)
+  testImplementation(libs.assertj)
+  testImplementation(libs.truth)
 }
